--- a/formulaire_html5.html
+++ b/formulaire_html5.html
@@ -35,11 +35,11 @@ Date de validité du passeport
             <legend>Etat Civil</legend>
             <!--bien penser à mettre les requested-->
             <label> Nom
-            <input type="text" name="name" placeholder="Jean" pattern="[A-Za-z]{1}">
+            <input type="text" name="name" placeholder="Jean" pattern="[A-Za-z]" required>
             </label>
                 
             <label> Prenom
-            <input type="text" name="name" placeholder="Dubois" pattern="[A-Za-z]{1}">
+            <input type="text" name="name" placeholder="Dubois" pattern="[A-Za-z]" required>
             </label>
 
             <p>
@@ -129,7 +129,7 @@ Date de validité du passeport
             <section>
             <h2>Métier</h2>
                 <select name="métier"> 
-                    <option value="charpentier" selected="selected">Charentier </option>
+                    <option value="charpentier" selected="selected">Charpentier </option>
                     <option value="grutier">Grutier</option>
                     <option value="menuisier">Menuisier</option>
                     <option value="cariste">Cariste</option> 
